--- a/SisMed/SisMed/Views/Medicos/Index.cshtml
+++ b/SisMed/SisMed/Views/Medicos/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<SisMed.Models.ViewModels.Medicos.ListarMedicoViewModel>
 @{
     ViewBag.Title = "Médicos";
+    string filtro = ViewBag.Filtro as string ?? "";
 }
 
 <section class="content-header">
@@ -17,6 +18,21 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
+                <div class="card-header">
+                    <div class="d-flex justify-content-between">
+                        <form asp-controller="Medicos" asp-action="Index">
+                            <div class="input-group input-group-sm" style="width: 300px">
+                                <input type="text" class="form-control" placeholder="Buscar Médico" name="filtro" value="@filtro" />
+
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-default">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
                 <div class="card-body table-responsive p-0">
                     <table class="table table-head-fixed text-nowrap">
                         <thead>
@@ -53,6 +69,26 @@
                             }
                         </tbody>
                     </table>
+                </div>
+                <div class="card-footer clearfix">
+                    @if(ViewBag.TotalPaginas > 0)
+                    {
+                        <ul class="pagination pagination-sm m-0 float-right">
+                            @if (ViewBag.NumeroPagina > 1)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" href="@Url.Action("Index", "Medicos", new { filtro = @ViewBag.Filtro, pagina = ViewBag.NumeroPagina - 1 })">&laquo;</a>
+                                </li>
+                            }
+                            <li class="page-item page-link">Página @ViewBag.NumeroPagina de @ViewBag.TotalPaginas</li>
+                            @if (ViewBag.NumeroPagina < ViewBag.TotalPaginas)
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" href="@Url.Action("Index", "Medicos", new { filtro = @ViewBag.Filtro, pagina = ViewBag.NumeroPagina + 1 })">&raquo;</a>
+                                </li>
+                            }
+                        </ul>
+                    }
                 </div>
             </div>
         </div>
